--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,7 +48,7 @@ linters-settings:
 linters:
   disable-all: true
   enable:
-    - depguard
+#    - depguard
     - dogsled
 #    - dupl
     - errcheck
