--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         flags: [""]
         go:
-          - "1.19"
-          - "1.20"
+          - "1.10"
+          - "1.21"
         arch:
           - amd64
         runner:
@@ -23,16 +23,16 @@ jobs:
           - macos-latest
         include:
           - arch: 386
-            go: "1.20"
+            go: "1.21"
             runner: ubuntu-latest
 
           - arch: amd64
             runner: windows-latest
-            go: "1.20"
+            go: "1.21"
             flags: "-p=1"
 
           - arch: amd64
-            go: "1.20"
+            go: "1.21"
             runner: ubuntu-latest
             flags: "-race"
     steps:
@@ -43,6 +43,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go }}
+          cache: false
 
       - name: Get Go environment
         id: go-env
