--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: '1.21.x'
+          cache: false
 
       # Note that we deliberately don’t restore GOCACHE.
       # That is, we must not cache e2e test results.
