--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: '1.21.x'
+          cache: false
 
       - name: Get Go environment
         id: go-env
