build: use go1.19 for compat

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
             go: "1.21"
             runner: ubuntu-latest
             flags: "-race"
+
+          - arch: amd64
+            go: "1.19"
+            runner: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
