test(e2e): disable e2e dialogs for now

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,3 +44,4 @@ jobs:
         env:
           GOTD_TEST_EXTERNAL: 1
           GOTD_MTPROXY_ADDR: "127.0.0.1:3128"
+          GOTD_E2E_DIALOGS_BROKEN: 1 # TODO(ernado): enable when fixed
