--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -45,3 +45,7 @@ jobs:
           GOTD_TEST_EXTERNAL: 1
           GOTD_MTPROXY_ADDR: "127.0.0.1:3128"
           GOTD_E2E_DIALOGS_BROKEN: 1 # TODO(ernado): enable when fixed
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_JOB_ID: ${{ github.job }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
+          GITHUB_RUN_ATTEMPT: ${{ github.run_attempt }}
