test(e2e): disable test account manager

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -45,6 +45,7 @@ jobs:
           GOTD_TEST_EXTERNAL: 1
           GOTD_MTPROXY_ADDR: "127.0.0.1:3128"
           TEST_ACCOUNTS_BROKEN: 1 # use external test accounts
+          TEST_ACCOUNT_MANAGER_DISABLED: 1
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_JOB_ID: ${{ github.job }}
           GITHUB_RUN_ID: ${{ github.run_id }}
