feat(qrlogin): add additional custom words to cSpell configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
         "APIID",
         "DCID",
         "gotd",
-        "qrlogin"
+        "qrlogin",
+        "stretchr",
+        "testutil",
+        "tgmock"
     ],
     "cSpell.language": "en, en-US"
 }
