--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         flags: [""]
         go:
-          - "1.23"
-          - "1.24"
+          - "oldstable"
+          - "stable"
         arch:
           - amd64
         runner:
@@ -24,11 +24,11 @@ jobs:
         include:
           - arch: amd64
             runner: windows-latest
-            go: "1.24"
+            go: "stable"
             flags: "-p=1"
 
           - arch: amd64
-            go: "1.24"
+            go: "stable"
             runner: ubuntu-latest
             flags: "-race"
 
